--- a/interface/login.html
+++ b/interface/login.html
@@ -2,19 +2,20 @@
 <html lang="en" data-bs-theme="auto">
 
 <head>
-    <script src="/docs/5.3/assets/js/color-modes.js"></script>
-
+    <title>Momento | Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Gabriel Augusto - gabrielaugusto.me">
-    <title>Momento | Login</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="assets/images/bootstrap-logo-shadow.png" sizes="180x180">
+    <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
+    <meta name="theme-color" content="#712cf9">
 
     <style>
         html,
@@ -129,26 +130,31 @@
 
     <main class="form-signin w-100 m-auto">
         <form action="home.html">
-            <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <img class="mb-4" src="assets/images/bootstrap-logo-shadow.png" alt="" width="72" height="57">
+            <h1 class="h3 mb-3 fw-normal">Bem-vindo</h1>
 
             <div class="form-floating">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <label for="floatingInput">E-mail</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <label for="floatingPassword">Senha</label>
             </div>
 
             <div class="form-check text-start my-3">
                 <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
-                    Remember me
+                    Lembrar de mim
                 </label>
             </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-            <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
+            <button class="btn btn-primary w-100 py-2" type="submit">Entrar</button>
+            <div class="form-check text-start my-3">
+                <a class="form-check-label" href="index.html">
+                    Voltar
+                </a>
+            </div>
+            <p class="mt-5 mb-3 text-body-secondary">&copy; 2023 Momento. All rights reserved.</p>
         </form>
     </main>
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
