--- a/interface/perfil.html
+++ b/interface/perfil.html
@@ -1,82 +1,115 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Perfil da Pessoa</title>
+  <title>Momento | Perfil de Funcionário</title>
   <!-- Incluindo o CSS do Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/header.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="assets/images/bootstrap-logo-shadow.png" sizes="180x180">
+  <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
+  <meta name="theme-color" content="#712cf9">
+  
 </head>
+
 <body>
 
-<div class="container">
-  <h2>Perfil da Pessoa</h2>
-  <div class="row">
-    <div class="col-md-4">
-      <img id="foto" src="" alt="Foto da Pessoa" class="img-fluid">
-    </div>
-    <div class="col-md-8">
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" readonly>
+  <div class="container">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Dashboard</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Escritórios</a></li>
+        <li class="nav-item"><a href="#" class="nav-link active">Funcionários</a></li>
+
+        <li class="nav-item"><a href="login.html" class="nav-link">Logout</a></li>
+      </ul>
+    </header>
+  </div>
+
+  <div class="container">
+    <h2>Perfil da Pessoa</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <img id="foto" src="" alt="Foto da Pessoa" class="img-fluid">
       </div>
-      <div class="form-group">
-        <label for="senha">Senha:</label>
-        <input type="password" class="form-control" id="senha" readonly>
-      </div>
-      <div class="form-group">
-        <label for="telefone">Telefone:</label>
-        <input type="tel" class="form-control" id="telefone" readonly>
-      </div>
-      <div class="form-group">
-        <label for="dataContratacao">Data de Contratação:</label>
-        <input type="date" class="form-control" id="dataContratacao" readonly>
-      </div>
-      <div class="form-group">
-        <label for="cargoId">ID do Cargo:</label>
-        <input type="text" class="form-control" id="cargoId" readonly>
-      </div>
-      <div class="form-group">
-        <label for="salario">Salário:</label>
-        <input type="number" class="form-control" id="salario" readonly>
-      </div>
-      <div class="form-group">
-        <label for="gerenteId">ID do Gerente:</label>
-        <input type="text" class="form-control" id="gerenteId" readonly>
-      </div>
-      <div class="form-group">
-        <label for="departamentoId">ID do Departamento:</label>
-        <input type="text" class="form-control" id="departamentoId" readonly>
+      <div class="col-md-8">
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" readonly>
+        </div>
+        <div class="form-group">
+          <label for="senha">Senha:</label>
+          <input type="password" class="form-control" id="senha" readonly>
+        </div>
+        <div class="form-group">
+          <label for="telefone">Telefone:</label>
+          <input type="tel" class="form-control" id="telefone" readonly>
+        </div>
+        <div class="form-group">
+          <label for="dataContratacao">Data de Contratação:</label>
+          <input type="date" class="form-control" id="dataContratacao" readonly>
+        </div>
+        <div class="form-group">
+          <label for="cargoId">ID do Cargo:</label>
+          <input type="text" class="form-control" id="cargoId" readonly>
+        </div>
+        <div class="form-group">
+          <label for="salario">Salário:</label>
+          <input type="number" class="form-control" id="salario" readonly>
+        </div>
+        <div class="form-group">
+          <label for="gerenteId">ID do Gerente:</label>
+          <input type="text" class="form-control" id="gerenteId" readonly>
+        </div>
+        <div class="form-group">
+          <label for="departamentoId">ID do Departamento:</label>
+          <input type="text" class="form-control" id="departamentoId" readonly>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    // Obtém o ID da pessoa a partir da URL
-    var urlParams = new URLSearchParams(window.location.search);
-    var pessoaId = urlParams.get('id');
+  <footer class="footer mt-auto py-3 bg-body-tertiary">
+    <div class="container">
+      <p class="mt-5 mb-3 text-body-secondary">&copy; 2023 Momento. All rights reserved.</p>
+    </div>
+  </footer>
 
-    // Faz a requisição FETCH para obter os dados da pessoa
-    fetch('http://localhost:8083/funcionarios/id/' + pessoaId)
-      .then(response => response.json())
-      .then(data => {
-        // Preenche os campos do perfil com os dados retornados da API
-        document.getElementById('foto').src = "../avatar/" + pessoaId + ".jpg";
-        document.getElementById('email').value = data.email;
-        document.getElementById('senha').value = data.senha;
-        document.getElementById('telefone').value = data.telefone;
-        document.getElementById('dataContratacao').value = data.dataContratacao;
-        document.getElementById('cargoId').value = data.cargoId;
-        document.getElementById('salario').value = data.salario;
-        document.getElementById('gerenteId').value = data.gerenteId;
-        document.getElementById('departamentoId').value = data.departamentoId;
-      })
-      .catch(error => {
-        // Caso ocorra algum erro na requisição
-        console.log('Erro ao obter os dados da pessoa');
-      });
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Obtém o ID da pessoa a partir da URL
+      var urlParams = new URLSearchParams(window.location.search);
+      var pessoaId = urlParams.get('id');
+
+      // Faz a requisição FETCH para obter os dados da pessoa
+      fetch('http://localhost:8083/funcionarios/id/' + pessoaId)
+        .then(response => response.json())
+        .then(data => {
+          // Preenche os campos do perfil com os dados retornados da API
+          document.getElementById('foto').src = "../avatar/" + pessoaId + ".jpg";
+          document.getElementById('email').value = data.email;
+          document.getElementById('senha').value = data.senha;
+          document.getElementById('telefone').value = data.telefone;
+          document.getElementById('dataContratacao').value = data.dataContratacao;
+          document.getElementById('cargoId').value = data.cargoId;
+          document.getElementById('salario').value = data.salario;
+          document.getElementById('gerenteId').value = data.gerenteId;
+          document.getElementById('departamentoId').value = data.departamentoId;
+        })
+        .catch(error => {
+          // Caso ocorra algum erro na requisição
+          console.log('Erro ao obter os dados da pessoa');
+        });
+    });
+  </script>
 
 </body>
+
 </html>
