Styles and Refining Markup

--- a/interface/perfil.html
+++ b/interface/perfil.html
@@ -13,21 +13,21 @@
   <link rel="apple-touch-icon" href="assets/images/bootstrap-logo-shadow.png" sizes="180x180">
   <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="32x32" type="image/png">
   <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="16x16" type="image/png">
-  <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
-  <meta name="theme-color" content="#712cf9">
   
+  <meta name="theme-color" content="#712cf9">
+
 </head>
 
 <body>
 
   <div class="container">
     <header class="d-flex justify-content-center py-3">
+      <a class="navbar-brand" href="index.html"><img src="assets/images/bootstrap-logo-shadow.png" class="logoImage" alt="Logo"></a>
+      <a class="navbar-brand" href="index.html">Momento</a>
+
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Dashboard</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Escritórios</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Funcionários</a></li>
-
         <li class="nav-item"><a href="login.html" class="nav-link">Logout</a></li>
       </ul>
     </header>
