--- a/interface/home.html
+++ b/interface/home.html
@@ -10,11 +10,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <!-- Favicons -->
+
     <link rel="apple-touch-icon" href="assets/images/bootstrap-logo-shadow.png" sizes="180x180">
     <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="32x32" type="image/png">
     <link rel="icon" href="assets/images/bootstrap-logo-shadow.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
     <meta name="theme-color" content="#712cf9">
 
 </head>
@@ -25,10 +24,7 @@
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Escritórios</a></li>
-                <li class="nav-item"><a href="#" class="nav-link ">Funcionários</a></li>
-
+                <li class="nav-item"><a href="home.html" class="nav-link">Dashboard</a></li>
                 <li class="nav-item"><a href="login.html" class="nav-link">Logout</a></li>
             </ul>
         </header>
@@ -130,5 +126,4 @@
 
     </script>
 </body>
-
 </html>
