--- a/interface/perfil.html
+++ b/interface/perfil.html
@@ -23,11 +23,10 @@
   <div class="container">
     <header class="d-flex justify-content-center py-3">
       <a class="navbar-brand" href="index.html"><img src="assets/images/bootstrap-logo-shadow.png" class="logoImage" alt="Logo"></a>
-      <a class="navbar-brand" href="index.html">Momento</a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Dashboard</a></li>
+        <li class="nav-item"><a href="home.html" class="nav-link">Dashboard</a></li>
         <li class="nav-item"><a href="login.html" class="nav-link">Logout</a></li>
       </ul>
     </header>
