--- a/interface-vanilla-html/sales_over_time.html
+++ b/interface-vanilla-html/sales_over_time.html
@@ -15,7 +15,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       // Fetch data from the API endpoint
-      fetch('/sales_over_time')
+      fetch('http://localhost:8084/vendas/data')
         .then(response => {
           if (!response.ok) {
             throw new Error('Network response was not ok');
@@ -28,10 +28,10 @@
           }
 
           // Extracting dates and total sales from the fetched data
-          const dates = data.map(item => item.date);
-          const totalSales = data.map(item => item.total_sales);
+          const dates = data.map(item => item.vendaData);
+          const totalVendas = data.map(item => item.vendas_totais);
           console.log(dates);
-          console.log(totalSales);
+          console.log(totalVendas);
 
           // Chart.js setup
           const ctx = document.getElementById('salesChart').getContext('2d');
@@ -40,8 +40,8 @@
             data: {
               labels: dates,
               datasets: [{
-                label: 'Total Sales Over Time',
-                data: totalSales,
+                label: 'Vendas Totais ao longo do tempo',
+                data: totalVendas,
                 backgroundColor: 'rgba(54, 162, 235, 0.2)',
                 borderColor: 'rgba(54, 162, 235, 1)',
                 borderWidth: 1
