--- a/interface-vanilla-html/performance_vendedores.html
+++ b/interface-vanilla-html/performance_vendedores.html
@@ -11,7 +11,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       // Fetch data from the API endpoint
-      fetch('/sales/employee/performance')
+      fetch('http://localhost:8081/performance/')
         .then(response => {
           if (!response.ok) {
             throw new Error('Network response was not ok');
@@ -26,8 +26,8 @@
           const data = dataArray[0]; // Extracting the first item from the array
 
           // Extracting employee names and total sales from the fetched data
-          const employees = dataArray.map(item => item.employee_name);
-          const totalSales = dataArray.map(item => item.total_sales);
+          const employees = dataArray.map(item => item.funcionarioNome);
+          const totalSales = dataArray.map(item => item.totalVendas);
 
           // Chart.js setup for employee performance comparison
           const ctx = document.getElementById('employeePerformanceChart').getContext('2d');
@@ -36,7 +36,7 @@
             data: {
               labels: employees,
               datasets: [{
-                label: 'Employee Performance Comparison',
+                label: 'Quantitativo de Vendas',
                 data: totalSales,
                 backgroundColor: 'rgba(75, 192, 192, 0.2)',
                 borderColor: 'rgba(75, 192, 192, 1)',
@@ -50,13 +50,13 @@
                   beginAtZero: true,
                   title: {
                     display: true,
-                    text: 'Total Sales'
+                    text: 'Vendas Totais'
                   }
                 },
                 y: {
                   title: {
                     display: true,
-                    text: 'Employees'
+                    text: 'Funcionarios'
                   }
                 }
               }
